--- a/BackEnd/pom.xml
+++ b/BackEnd/pom.xml
@@ -59,6 +59,12 @@
             <version>2.1.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.yaml</groupId>
+            <artifactId>snakeyaml</artifactId>
+            <version>1.29</version>
+        </dependency>
+
     </dependencies>
 
     <build>
@@ -79,6 +85,7 @@
                 <version>2.6.0</version>
                 <configuration>
                     <!-- 工程主入口-->
+                    <skip>true</skip>
                     <mainClass>top.kuoer.BlogApplication</mainClass>
                     <includeSystemScope>true</includeSystemScope>
                 </configuration>
