--- a/BackEnd/pom.xml
+++ b/BackEnd/pom.xml
@@ -111,7 +111,7 @@
                 <version>2.6.0</version>
                 <configuration>
                     <!-- 工程主入口-->
-<!--                    <skip>true</skip>-->
+                    <skip>true</skip>
                     <mainClass>top.kuoer.BlogApplication</mainClass>
                     <includeSystemScope>true</includeSystemScope>
                 </configuration>
