--- a/一些插件示例/QQLogin/pom.xml
+++ b/一些插件示例/QQLogin/pom.xml
@@ -29,7 +29,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jar-plugin</artifactId>
                 <configuration>
-                    <outputDirectory>C:\Users\Ning\Desktop\Kuoer's Blog\BackEnd\plugins</outputDirectory>
+                    <outputDirectory>D:\Project\自己的\KuoerBlog\BackEnd\plugins</outputDirectory>
                 </configuration>
             </plugin>
         </plugins>
